[gd_scene load_steps=9 format=2]

[ext_resource path="res://native/Client.gdns" type="Script" id=1]
[ext_resource path="res://assets/debug/target.png" type="Texture" id=2]
[ext_resource path="res://assets/debug/colored_circle128.png" type="Texture" id=3]
[ext_resource path="res://scene/game.gd" type="Script" id=4]
[ext_resource path="res://assets/bg/starfield.png" type="Texture" id=5]
[ext_resource path="res://shaders/sprite_display.material" type="Material" id=6]
[ext_resource path="res://component/camera/FollowCamera.tscn" type="PackedScene" id=7]

[sub_resource type="GDScript" id=1]
script/source = "extends Sprite


# Declare member variables here. Examples:
# var a: int = 2
# var b: String = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta: float) -> void:
	position = get_global_mouse_position()
"

[node name="Game" type="Node2D"]
material = ExtResource( 6 )
script = ExtResource( 4 )

[node name="Client" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 2560, 0 )
texture = ExtResource( 3 )
script = SubResource( 1 )

[node name="FollowCamera" parent="." instance=ExtResource( 7 )]
current = true
zoom = Vector2( 4, 4 )

[node name="BackGroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="TextureRect" parent="BackGroundLayer"]
visible = false
modulate = Color( 0.329412, 0.329412, 0.329412, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="CreateLocalButton" type="Button" parent="UILayer"]
anchor_left = 0.1
anchor_top = 0.9
anchor_right = 0.1
anchor_bottom = 0.9
margin_top = -100.0
margin_right = 100.0
text = "create local"

[node name="CreateFleet" type="Button" parent="UILayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -181.0
margin_bottom = 20.0
text = "debug create fleet request"

[node name="DebugInfosLabel" type="Label" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UpdateDebugInfosTimer" type="Timer" parent="UILayer/DebugInfosLabel"]
wait_time = 0.1
autostart = true

[connection signal="pressed" from="UILayer/CreateLocalButton" to="." method="_on_CreateLocalButton_pressed"]
[connection signal="pressed" from="UILayer/CreateFleet" to="." method="_on_CreateFleet_pressed"]
[connection signal="timeout" from="UILayer/DebugInfosLabel/UpdateDebugInfosTimer" to="." method="_on_UpdateDebugInfosTimer_timeout"]
