[gd_scene load_steps=9 format=2]

[ext_resource path="res://native/Client.gdns" type="Script" id=1]
[ext_resource path="res://component/DebugUI.gd" type="Script" id=2]
[ext_resource path="res://component/Camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/game.gd" type="Script" id=4]
[ext_resource path="res://assets/icon/godot-ferris-32x32.png" type="Texture" id=5]
[ext_resource path="res://shaders/sprite_display.material" type="Material" id=6]
[ext_resource path="res://assets/debug/pixel.png" type="Texture" id=7]
[ext_resource path="res://assets/debug/PixelTextureGrid_32.png" type="Texture" id=8]

[node name="Game" type="Node2D"]
material = ExtResource( 6 )
script = ExtResource( 4 )

[node name="Camera2D" parent="." instance=ExtResource( 3 )]

[node name="pixel" type="Sprite" parent="."]
visible = false
position = Vector2( -42.0011, 19.9662 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0.866667, 0.137255, 1 )
texture = ExtResource( 5 )

[node name="Client" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = -467.0
margin_top = 26.0
margin_right = -168.0
margin_bottom = 246.0
text = "try connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Debug" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.02
anchor_right = 0.5
anchor_bottom = 0.05
margin_left = -162.0
margin_right = 162.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2
custom_constants/separation = 18
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeDilation" type="Control" parent="CanvasLayer/Debug"]
margin_right = 200.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 2
size_flags_vertical = 3

[node name="TickBuffer" type="Control" parent="CanvasLayer/Debug"]
margin_left = 218.0
margin_right = 328.0
margin_bottom = 80.0
rect_min_size = Vector2( 110, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Debug/TickBuffer"]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
